# field-monitor

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.example.toml  renovate.json  targets.apple-example.toml  targets.example.toml  vantage-points.example.env
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  snyk.yml
docs/: ARCHITECTURE.md  CI.md  CONFIG.md  LEGITIMACY.md  SETUP.md
reporting/: gen_report.py
reporting/examples/: 22-23-facts.txt  22-23-open-questions.txt
scripts/: collect-and-report.sh  collect.sh  deploy-vantage.sh  deploy.sh  field-monitor-healthcheck.sh
src/: aggregate.rs  audit.rs  corroborate.rs  logfmt.rs  main.rs  model.rs  probe.rs  runner.rs  ssh.rs
systemd/: field-monitor-audit.service  field-monitor-audit.timer  field-monitor-healthcheck.service  field-monitor-healthcheck.timer  field-monitor-probe.service  field-monitor-probe.timer  field-monitor-report.service  field-monitor-report.timer
templates/: apple-report-template.md
templates/examples/: 22-23-facts.txt  22-23-open-questions.txt
tests/: gen_report.rs
