[package]
name = "field-monitor"
version = "0.4.0"
edition = "2021"
description = "Passive reachability monitoring of operator-defined public endpoints from own servers + read-only security audit (legitimate, allowlist-only)"
license = "GPL-3.0"

# Static: one binary, no dynamic runtimes.
[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
dotenvy = "0.15"
